# config-manager

./: Cargo.toml  Dockerfile-client  Dockerfile-server  README.md  build.rs  docker-compose.yml
proto/: config-manager.proto
src/: client.rs  config.rs  file_manager.rs  handlers.rs  lib.rs  main.rs  models.rs  server.rs
tests/: integration_test.rs
