[package]
name = "config-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "config-manager-server"
path = "src/server.rs"

[[bin]]
name = "config-manager-client"
path = "src/client.rs"

[dependencies]
serde_json = "1.0.1"
serde = { version =  "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-serde = "0.8"
tonic = "0.8.2"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.2"
prost-build = "0.11.0"
prost-serde = "0.3.0"